--- a/src/Pages/Querys/Query/Query.css
+++ b/src/Pages/Querys/Query/Query.css
@@ -6,7 +6,7 @@
 .title_header{
     font-size: 0.4rem;
     color: #333333;
-    margin-bottom: 0.24rem;
+    margin-bottom: 0.44rem;
 }
 input{
     font-size: 0.4rem;
@@ -15,4 +15,46 @@ input{
     border-bottom: 1px solid #DDDDDD;
     width: 100%;
     height: 0.8rem;
+}
+.female, .male, .select{
+    height: 1rem;
+    line-height: 1rem;
+}
+.female:visited, .female:active, .male:visited, .male:active{
+    background-color: #F9F9F9;
+}
+input[type="radio"] + label::before,
+input[type="checkbox"] + label::before{
+    content: "\a0"; /*不换行空格*/
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 0.4rem;
+    width: 0.4rem;
+    height: 0.4rem;
+    line-height: 0.4rem;
+    margin-right: 0.52rem;
+    margin-left: 0.26rem;
+    border-radius: 50%;
+    border: 2px solid #BBBBBB;
+    position: relative;
+    bottom: 0.04rem;
+}
+input[type="checkbox"] + label::before{
+    border-radius: 0;
+}
+input[type="radio"]:checked + label::before,
+input[type="checkbox"]:checked + label::before {
+    background-color: #0CB8F5;
+    /*background-clip: content-box;*/
+    /*padding: .2em;*/
+}
+input[type="radio"],
+input[type="checkbox"]{
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+}
+label{
+    display: block;
+    font-size: 0.4rem;
+    color: #666666;
 }
