--- a/src/Components/Question/QuestionComponent.css
+++ b/src/Components/Question/QuestionComponent.css
@@ -1,5 +1,6 @@
 .agree__container {
   padding: .6rem .3rem;
+  margin-bottom: 2.14rem;
   line-height: .45rem;
 }
 
@@ -17,6 +18,7 @@
 }
 
 .agree__buttons {
+  background: #fff;
   position: fixed;
   left: 0;
   right: 0;
@@ -33,6 +35,7 @@
 
 .question__container {
   padding: .3rem;
+  margin-bottom: 2.14rem;
 }
 
 .question__title {
@@ -43,6 +46,8 @@
 }
 
 .question__bottons {
+  z-index: 999;
+  background: #fff;
   position: fixed;
   left: 0;
   right: 0;
