--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+* {box-sizing: border-box}
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; font-family: PingFangSC-Regular;}
 h1, h2, h3, h4, h5, h6{ font-size:100%; }
 address, cite, dfn, em, var { font-style:normal; }
@@ -10,33 +11,3 @@ sub{ vertical-align:text-bottom; }
 legend { color:#000; }
 fieldset, img { border:0; }
 table { border-collapse:collapse; border-spacing:0; }
-.blue_btn{
-    background-color: #0CB8F5;
-    border: 1px solid #0CB7F5;
-    border-radius: 0.08rem;
-    width:5rem;
-    height:0.88rem;
-    line-height:0.88rem;
-    font-size: 0.38rem;
-    text-align:center;
-    margin: 0 auto;
-}
-.white_btn{
-    background-color: #FFFFFF;
-    border: 1px solid #0CB7F5;
-    border-radius: 0.08rem;
-    width:5rem;
-    height:0.88rem;
-    line-height:0.88rem;
-    font-size: 0.38rem;
-    text-align:center;
-    margin: 0 auto;
-}
-.whiteColor{
-    color: #FFFFFF;
-    display: block;
-}
-.blueColor{
-    color: #0CB8F5;
-    display: block;
-}
