1129(1)调查表修改

--- a/src/Components/Survey/SurveyComponent.css
+++ b/src/Components/Survey/SurveyComponent.css
@@ -3,8 +3,7 @@ html:not([data-scale]) .am-list-body::after{
   height: 0;
 }
 
-.am-list-item,
-.am-list-item.am-input-item{
+:global(.am-list-item){
   border: 1px solid lightskyblue;
 }
 
