--- a/src/Components/Survey/SurveyComponent.css
+++ b/src/Components/Survey/SurveyComponent.css
@@ -55,15 +55,15 @@ html:not([data-scale]) .am-list-body::after{
   color: rgb(82, 84, 105);
   letter-spacing: 1px;
   line-height: 1.4;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 1.1rem 0;
   border-bottom: 3px solid rgb(68, 144, 240);
 }
 
 .survey_noUnit {
   font-size: 0.35rem;
   /*color: rgb(82, 84, 105);*/
-  height: 1.5rem;
   padding-top: 0.8rem;
+  line-height: 1.3;
 }
 
 .survey_noUnit span{
@@ -82,7 +82,7 @@ html:not([data-scale]) .am-list-body::after{
 
 .info_content {
   font-size: 0.37rem;
-  line-height: 2.4;
+  line-height: 1.8;
   /*color: rgb(82, 84, 105);*/
   letter-spacing: 1px;
 }
@@ -98,7 +98,7 @@ html:not([data-scale]) .am-list-body::after{
 
 .dsa_id{
   font-size: 0.36rem;
-  line-height: 2.5;
+  line-height: 1.8;
 }
 
 .dsa_title{
