--- a/src/Components/newSurvey/SurveyComponent.css
+++ b/src/Components/newSurvey/SurveyComponent.css
@@ -46,7 +46,8 @@ html:not([data-scale]) .am-list-body::after{
 
 .survey_title {
   font-size: 0.5rem;
-  line-height: 2;
+  line-height: 1.3;
+  text-align: center;
   color: rgb(59, 59, 59);
 }
 
